--- a/index.html
+++ b/index.html
@@ -13,21 +13,24 @@
     <div class="row">
       <div class="col-xs-12 col-lg-6 about-section">
         <h1>Yo, I'm
-          <div class="blue">Jan Paul Fernandez</div>
+          <div class="blue">Paul 👋</div>
         </h1>
-        <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun and excitement it provides, others may experience gambling as an addictive and distractive habit. Statistics show that</p>
+        <p>I'm a System Analyst - IT Cadet working with an awesome team in one of a bank here in the Philippines. Currently living in one of the busiest city in Manila, the Makati City.</p>
+        <p>Outside, I evangelize technological upgrade and automation for the MSME's business processes here in the Philippines, mostly in provinces.</p>
+        <p>Also, I'm a league player, photo hobbyist and an audiophile.</p>
         <ul class="links">
-          <li><a href=""><i class="fa fa-envelope"></i>jpaulfernandez.18@gmail.com</a></li>
-          <li><a href=""><i class="fa fa-linkedin"></i>jpaulfernandez.18@gmail.com</a></li>
-          <li><a href=""><i class="fa fa-github"></i>jpaulfernandez.18@gmail.com</a></li>
-          <li><a href=""><i class="fa fa-instagram"></i>@paultakephotos_ </a></li>
+          <li><a href="mailto:jpaul.fernandez18@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
+          <li><a href="https://linkedin.com/in/jpaulfernandez" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+          <li><a href="https://github.com/jpaulfernandez" target="_blank"><i class="fa fa-github"></i></a></li>
+          <li><a href="https://www.instagram.com/paultakephotos_/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="https://medium.com/@winter88" target="_blank"><i class="fa fa-medium"></i></a></li>
         </ul>
       </div>
       <div class="col-xs-12 col-lg-6 portrait-section"></div>
     </div>
     <div class="row">
       <div class="col-xs-12 work-section">
-        <h1 class="-white mb20">Work Exp_</h1>
+        <h1 class="-white mb20">Work Exp_ 👨‍💻</h1>
         <div class="col-xs-12 col-lg-4 exp">
           <div class="title">
             <p>System Analyst – IT Cadet</p>
@@ -59,7 +62,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12 project-section">
-        <h1 class="blue mb20">Projects_</h1>
+        <h1 class="blue mb20">Projects_ 💻</h1>
         <div class="col-xs-12 col-lg-6 project">
           <div class="logo"><img src="http://via.placeholder.com/470x270"/></div>
           <div class="title">
@@ -72,7 +75,7 @@
         <div class="col-xs-12 col-lg-6 project">
           <div class="logo"><img src="http://via.placeholder.com/470x270"/></div>
           <div class="title">
-            <h2>Elite Pro</h2>
+            <h2>MSP Operations Automation</h2>
           </div>
           <div class="desc">
             <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun and excitement it provides, others may experience gambling as an addictive and distractive habit. Statistics show that while 85 percent of the adult population in the US enjoys some type of gambling every year, between 2 and 3 percent of will develop a gambling problem and 1 percent of them are diagnosed as pathological gamblers. Where can you draw the line between harmless gambling to problem gambling? How can you tell if you or your friend are compulsive gamblers? Here you can find answers to these questions and other questions regarding problem gambling and gambling addiction. What is the Meaning of Problem Gambling?</p>
@@ -81,13 +84,30 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 center mt40 mb40">
-        <button class="git-btn">View more projects in Github</button>
+      <div class="col-xs-12 center mt40 mb40"><a class="git-btn" href="https://github.com/jpaulfernandez" target="_blank">View more projects in Github</a></div>
+    </div>
+    <div class="row">
+      <div class="container-fluid">
+        <div class="col-xs-12 arsenal-section">
+          <h1 class="mb20">Arsenal_</h1>
+          <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 tech-logo"><img src="assets/img/html5.svg"/></div>
+          <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 tech-logo"><img src="assets/img/css.svg"/></div>
+          <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 tech-logo"><img src="assets/img/bootstrap.svg"/></div>
+          <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 tech-logo"><img src="assets/img/sass.svg"/></div>
+          <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 tech-logo"><img src="assets/img/js.svg"/></div>
+          <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 tech-logo"><img src="assets/img/jquery.svg"/></div>
+          <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 tech-logo"><img src="assets/img/gulp-plain.svg"/></div>
+          <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 tech-logo"><img src="assets/img/angular.svg"/></div>
+          <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 tech-logo"><img src="assets/img/dot-net.svg"/></div>
+          <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 tech-logo"><img src="assets/img/csharp.svg"/></div>
+          <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 tech-logo"><img src="assets/img/nodejs.svg"/></div>
+          <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 tech-logo"><img class="center" src="assets/img/oracle.svg"/></div>
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12 photog-section">
-        <h1 class="blue mb20">Photography_</h1>
+        <h1 class="blue mb20">Photography_ 📷</h1>
         <div class="col-xs-12 col-lg-6">
           <div class="logo"><img src="assets/img/1.jpeg"/></div>
           <div class="title">
@@ -127,13 +147,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 center mt40 mb40">
-        <button class="git-btn">Visit me on Instagram</button>
-      </div>
+      <div class="col-xs-12 center mt40 mb40"><a class="git-btn" href="https://www.instagram.com/paultakephotos_/" target="_blank">Visit me on Instagram</a></div>
     </div>
     <div class="row">
       <div class="col-xs-12 talk-section">
-        <h1 class="mb20">Talks_</h1>
+        <h1 class="mb20">Talks_ 🎤</h1>
         <div class="col-xs-12 col-lg-6 talk">
           <div class="title">
             <p>Sprint!</p>
