--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="col-xs-12 project-section">
         <h1 class="blue mb20">Projects_ 💻</h1>
         <div class="col-xs-12 col-lg-6 project">
-          <div class="logo"><img src="http://via.placeholder.com/470x270"/></div>
+          <div class="logo"><img src="https://via.placeholder.com/470x270"/></div>
           <div class="title">
             <h2>Elite Pro</h2>
           </div>
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="col-xs-12 col-lg-6 project">
-          <div class="logo"><img src="http://via.placeholder.com/470x270"/></div>
+          <div class="logo"><img src="https://via.placeholder.com/470x270"/></div>
           <div class="title">
             <h2>MSP Operations Automation</h2>
           </div>
