--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12 work-section">
-        <h1 class="-white mb20">Work Exp_ 👨‍💻</h1>
+        <h1 class="-white mb20">Work Exp_</h1>
         <div class="col-xs-12 col-lg-4 exp">
           <div class="title">
             <p>System Analyst – IT Cadet</p>
@@ -62,7 +62,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12 project-section">
-        <h1 class="blue mb20">Projects_ 💻</h1>
+        <h1 class="blue mb20">Projects_</h1>
         <div class="col-xs-12 col-lg-6 project">
           <div class="logo"><img src="https://via.placeholder.com/470x270"/></div>
           <div class="title">
@@ -107,7 +107,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12 photog-section">
-        <h1 class="blue mb20">Photography_ 📷</h1>
+        <h1 class="blue mb20">Photography_</h1>
         <div class="col-xs-12 col-lg-6">
           <div class="logo"><img src="assets/img/1.jpeg"/></div>
           <div class="title">
@@ -151,7 +151,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12 talk-section">
-        <h1 class="mb20">Talks_ 🎤</h1>
+        <h1 class="mb20">Talks_</h1>
         <div class="col-xs-12 col-lg-6 talk">
           <div class="title">
             <p>Sprint!</p>
@@ -203,5 +203,7 @@
   </div>
   <script src="./vendors/jquery/dist/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="./assets/js/app.js"></script>
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   <script src="./assets/js/app.js"></script>
 </body>
